<resources>
    <string name="app_name">Kas Remaja</string>
    <string name="version">Version 0.1 BETA</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="title_login">Please login to continue</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="saldo">SALDO</string>
    <string name="titleSay">Selamat Malam,</string>
    <string name="titleUsername">Username</string>
    <string name="title_brosur">title Brosur</string>
    <string name="titleSize">Size : 289.83 KB</string>
    <string name="titleTanggal">Tanggal upload : 20-09-2020</string>
    <string name="brosur_terbaru">Brosur Terbaru</string>

    <string name="foo">Lorem Ipsum</string>
    <string name="title_open_browser">Buka di Browser</string>
    <string name="title_notification">Title Notification</string>
    <string name="dec_notification">Deskripsi Notification</string>
    <string name="notification">Notification</string>
    <string name="title_download">Download</string>
    <string name="lihat">Lihat</string>
    <string name="title_history">History</string>
    <string name="profile">Profile</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fullname">fullname</string>
    <string name="email">Email</string>
    <string name="example_email">example@gmail.com</string>
    <string name="akun">akun</string>
    <string name="no_hp">No Hp</string>
    <string name="example_phone">0812284754344</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomer">No Hp</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_password">Edit Password</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="re_password">Re-Password</string>
    <string name="title_offline">Offline Mode</string>
</resources>