<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/etusername"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <TextView
        android:id="@+id/txt_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_login"
        app:layout_constraintTop_toBottomOf="@+id/txt_login" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/raund_edittext"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login1" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/raund_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintStart_toStartOf="@+id/etusername"
        app:layout_constraintTop_toBottomOf="@+id/etusername" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/etpassword"
        app:layout_constraintTop_toBottomOf="@+id/etpassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/raund_signin"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/etpassword"
        app:layout_constraintTop_toBottomOf="@+id/forget" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_signup"
        android:fontFamily="@font/regular"
        android:hint="@string/register"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/etpassword"
        app:layout_constraintTop_toBottomOf="@+id/etpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>