<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.editPassword.PasswordActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edit_password"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_update"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_lama" />

            <EditText
                android:id="@+id/et_oldpass"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:hint="@string/password_lama"
                android:inputType="textPassword"
                tools:ignore="Autofill,UnusedAttribute"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_baru" />

            <EditText
                android:id="@+id/et_newpass"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:hint="@string/password_baru"
                android:inputType="textPassword"
                tools:ignore="Autofill,UnusedAttribute"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/re_password" />

            <EditText
                android:id="@+id/et_repass"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="10dp"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                tools:ignore="Autofill,UnusedAttribute"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_button"
        android:hint="@string/update_profile"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>